# directory

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
doc/: requirements.txt
doc/source/: architecture.md  conf.py  from-scratch.md  index.rst  prerequisites.md  release-cycle.md  releasing.md  transform-project.md
modelw_directory/: __init__.py
