[tool.poetry]
name = "modelw-directory"
version = "1.0.0a1"
description = "Model W directory, reference and documentation"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "*"
myst-parser = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
