[tool.poetry]
name = "modelw_directory"
version = "2023.7.0"
description = "Model W directory, reference and documentation"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "*"
Sphinx = "*"
myst-parser = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
monoformat = "^0.1.0b3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
